--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "next": "15.1.3",
