ranking page updated (chatbot and leaderboard)

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@api/yelp-developers": "file:.api/apis/yelp-developers",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
     "@react-google-maps/api": "^2.20.5",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "lottie-web": "^5.12.2",
